--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -15,8 +15,10 @@ produces
 
 =head1 DESCRIPTION
 
-This module produces JSON out of Perl for the simple cases of strings,
-numbers, nested hashes and arrays.
+This module produces JSON out of Perl.
+
+The example programs in this documentation are all found in the
+directory F<examples/> in the distribution.
 
 =head1 FUNCTIONS
 
@@ -91,7 +93,9 @@ Unicode values are not escaped.
 =head3 Integers
 
 Integers are printed in the obvious way. Note that what you input to
-Perl as an integer, Perl may interpret to be a floating point number.
+Perl as an integer, Perl may interpret to be a floating point number,
+if has a very large absolute value, in which case this module will
+print it out like a floating point number.
 
 =head3 Floating point numbers
 
@@ -116,9 +120,12 @@ Undefined values are mapped to the JSON literal "null".
 
 =head3 Booleans
 
-The default is to ignore booleans. Experimentally, there is an
-interface to convert objects to C<true> or C<false> literals within
-the JSON. See L</bool> below.
+Booleans (C<true> and C<false>) from input via JSON::Parse (version
+0.36_01 or later) will be turned into C<true> and C<false>
+outputs. You can also arrange for Perl objects, such as the "true" and
+"false" values of L<JSON::PP>, to be converted to booleans using
+L</bool>. This requires the use of a JSON::Create object created via
+L</new>.
 
 =head3 Unicode escapes
 
@@ -135,21 +142,6 @@ undefined value. If every part of the input is not marked as "utf8",
 this does not happen, but there is also currently no validation of the
 output as being in Unicode, so binary strings can pass through without
 correction. See also L</BUGS>.
-
-=head3 Perl objects
-
-Perl objects are stringified as if via Perl's function "print". For
-example
-
-[% INCLUDE "/home/ben/projects/json-create/examples/object.pl" | xtidy %]
-
-produces
-
-[% INCLUDE "object-out.txt" | xtidy %]
-
-If you want to make the JSON for your object yourself, you can
-register a JSON generator using the L</obj> method. This requires a
-JSON::Create object, created with L</new>.
 
 =head2 Other reference types
 
@@ -204,22 +196,61 @@ outputs
 
 [% INCLUDE "boolean-out.txt" | xtidy %]
 
-Interoperability with the following Perl modules can be confirmed by
-running F<t/bool.t> in the distribution:
+=head4 Interoperability
+
+The boolean values of the following Perl modules can interoperate with
+JSON::Create. 
 
 =over
 
 =item L<boolean>
 
+    $jc->bool ('boolean');
+
 =item L<JSON::Tiny>
+
+    $jc->bool ('JSON::Tiny::_Bool');
+
+Round trip compatibility is also confirmed for JSON::Tiny version 0.54.
 
 =item L<JSON::PP>
 
+    $jc->bool ('JSON::PP::Boolean');
+
+Round trip compatibility is also confirmed for JSON::PP version 2.27300.
+
+=item L<Types::Serialiser>
+
+    $jc->bool ('JSON::PP::Boolean');
+
+B<Please note> the above is not a typo, L<JSON::PP::Boolean> is the
+correct object type for Types::Serialiser. To confirm this, try
+
+    print ref $Types::Serialiser::false;
+
+=item L<Mojo::JSON>
+
+    $jc->bool ('JSON::PP::Boolean', 'Mojo::JSON::_Bool');
+
+Round trip compatibility is also confirmed for Mojo::JSON version 6.25.
+
+The current version of Mojo::JSON (Mojolicious version 6.25) actually
+depends on L<JSON::PP> and uses the type C<JSON::PP::Boolean> for its
+true and false values. Older versions used their own type,
+C<Mojo::JSON::_Bool>.
+
 =back
 
-More modules will be added to this list as time permits. (So far,
-ironically, only L<JSON::Parse> has proved inoperable with this
-module. See L</BUGS>.)
+You can also switch on multiple modules using a list:
+
+    $jc->bool (qw/boolean JSON::Tiny::_Bool JSON::PP::Boolean/);
+
+The compatibility of the above modules can be confirmed by running the
+test script F<t/bool.t> in the distribution. However, JSON::Create
+does not install these modules, so unless you have installed them
+yourself, the tests will just be skipped.
+
+More modules will be added to this list as time permits.
 
 =head3 escape_slash
 
@@ -244,20 +275,31 @@ With this method you can register JSON generators for your Perl
 objects. When JSON::Create finds your object, it will call the method
 you have supplied.
 
-The format is to call C<obj> with a hash with the keys being object
-names and the values being code references. The return value of your
-method should be a single value, a string containing your object's
-JSON encoding.
+Call C<obj> with a hash. The keys are your object names, and the
+corresponding values are code references to the function you want to run:
 
-The output of your method is passed through to the output string
-completely unaltered. If you want to have your JSON output checked for
-validity, you can switch on validation using the method L</validate>.
+    $jc->obj (
+         'My::Cool::Object' => \& object_to_json,
+    );
+
+The function is called with the object reference as its only
+argument, as if called like this:
+
+    my $user_json = $cool_object->object_to_json ();
+
+The return value of your function, C<object_to_json> in the above
+example, must be a single value, a string containing your object's
+JSON encoding.
 
 [% INCLUDE "zilog.pl" | xtidy %]
 
 produces
 
 [% INCLUDE "zilog-out.txt" | xtidy %]
+
+The output of your method is passed through to the output string
+completely unaltered. If you want to have your JSON output checked for
+validity, you can switch on validation using the method L</validate>.
 
 =head3 set_fformat
 
@@ -296,6 +338,10 @@ If this is called with a true value, validate the user-generated JSON
 given by the callbacks registered with L</obj>. The validation is done
 via the routine C<assert_valid_json> of L<JSON::Parse>, so you need to
 have that module installed to use this.
+
+If JSON::Parse is installed, and the JSON fails to validate, this will
+produce a fatal error. If JSON::Parse is not installed, it will also
+produce a fatal error, regardless of whether your JSON is valid.
 
 =head1 EXPORTS
 
@@ -346,9 +392,8 @@ C<\u2028> and C<\u2029> are not implemented yet.
 
 There is currently no facility to add whitespace to the output JSON.
 
-L<JSON::Parse>'s boolean types cannot correctly interoperate with
-L</bool>. This is a bug in JSON::Parse.
-
+There is currently no way to delete object handlers from a
+JSON::Create object.
 
 =head1 PERFORMANCE
 
@@ -375,12 +420,13 @@ details.
 
 The exact time I've spent making this module is recorded in the file
 F<timesheet.txt> in the top directory of the distribution. At the time
-of version 0.06_04, I've spent 1 day, 2 hours and 5 minutes working on
+of version 0.07, I've spent 1 day, 2 hours and 26 minutes working on
 this.
 
 The module is currently in use everywhere that I need to generate JSON
 within Perl. However, I would suggest caution in switching to this
-module since not all parts are implemented yet.
+module from the more established JSON solutions on CPAN, since not all
+parts are implemented yet.
 
 [% INCLUDE "author" %]
 [% INCLUDE "terminology" %]
